...
  notAMemberYetSignup: 'Not a member yet?',
  loginText: 'Log in',
  quitText: 'Quit',
  orText: 'OR',
  emailPlaceHolder: 'Email',
  allDay: 'All day',
  all: 'All',
  starts: 'Start',
  ends: 'End',
  until: 'Until',
  weekly: 'Weekly',
  addTime: 'Add time',
  setAvailable: 'Set available',
...
  checkEmailText: 'Please check your e-mail',
  checkEmailDescText:
    'We have sent you an email with a link to reset your password. It may take a few minutes for you to receive it.',
  signTerms:
    "By continuing you agree to Towny's Terms of Service, We will manage information about you as described in our PrivacyPolicy and Cookie Policy.",
  resetText: 'Reset your password.',
  nextTitle: 'NEXT',
  emailNotRegisterd: 'This email is not registered.',
  varificationLinkSend: 'Verification email was sent successfully.',
  deactivateTitle: 'DEACTIVATE ACTIVITY',
  deactivateAccountTitle: 'DEACTIVATE MY ACCOUNT',
  terminateAccount: 'TERMINATE ACCOUNT',
  pauseTeam: 'PAUSE TEAM',
...
  loginCapTitle: 'LOGIN',
  continueCapTitle: 'CONTINUE',
  signUpCapitalText: 'SIGN UP',
  fnameText: 'First Name',
  lnameText: 'Last Name',
  nameText: 'Name',
  save: 'Save',
  done: 'Done',
  yes: 'Yes',
  no: 'No',
  passwordText: 'Password (at least 6 characters)',
  passwordWarningMessage: 'Password should be atleast 6 characters.',
  confirmPasswordText: 'Confirm Password',
  // Password message
...
  signedUpTime: 'Signed up in 2020',
  infoTeamTitle: 'Vancouver Teams FC',
  infoTeamCity: 'Vancouver, BC',
  ntrpTitle: 'NTRP',
  refereeFee: 'Referee Fee',
  cancellationPolicy: 'Cancellation Policies',
  gameFee: 'Match Fee',
  perHour: ' (per hours)',
  ntrpSubTitle: ' (The national tennis rating program)',
  homePlaceTitle: 'Home place',
  homePlaceValue: 'BC Place 2059 W 4th Ave, Vancouver, BC, V6J 1M7',
  clubTeamTitle1: 'New York City FC',
  clubTeamCity1: 'New york, NY',
...
  // Choose gender screen
  addGenderText: 'Add your gender.',
  notDisplayGenderText: 'This won’t be displayed on your public profile.',
  whyAskingGenderText: 'Why is TownsCup asking for my gender?',
  genderText:
    'This information helps TownsCup provide gender-appropriate services to its users. Furthermore, this information is also required when you join a group or sports game which has gender-requirement in the TownsCup community.',
  maleRadioText: 'Male',
  femaleRadioText: 'Female',
  otherRadioText: 'Other',
  canNotChangeGender:
    'You can’t change your gender once you have completed the sign-up process.',
  // CreateTeam Screen 1
  star: '*',
...
  userNotFoundByEmail: 'We didn’t find a user whose e-mail account is',
  jerseyNumberPlaceholder: 'Jersey Number',

  abouttitle: 'About',
  basicinfotitle: 'Basic Info',
  membershipFeesTitle: 'Membership Fees',
  teamstitle: 'Teams',
  clubstitle: 'Clubs',
  leaguesTitle: 'League',
  signedupin: 'Signed up in ',
  editabouttitle: 'Edit About',
  editbasicinfotitle: 'Edit Basic Info',
  birth: 'Birth',
...
  recentMatchesTitle: 'Recent Matches',
  upcomingMatchesTitle: 'Upcoming Matches',
  lookingForTitle: 'Available for Challenge',
  shortsTitle: 'Shorts',
  hiringPlayerTitle: 'Recruiting Members',
  lookingForTeamTitle: 'Looking For Team/Club',
  refereesTitle: 'Referees',
  chooseSetting: 'Choose Setting',
  scorekeeperTitle: 'Scorekeepers',
  searchTitle: 'Search by city, state or country',
  challengeeSecureText: 'The challengee secures the match place',
  challengerSecureText: 'The challenger secures the match place',
  recentMatchPlaceholderText: 'NO RECENT MATCHES',
  upcomingMatchPlaceholderText: 'NO UPCOMING MATCHES',
  challengerPlaceholderText:
...
  referee: 'referee',
  match: 'Match',
  chooseagame: 'Choose a game',
  dateAndTime: 'date & time',
  start: 'start',
  end: 'end',
  venue: 'Venue',
  address: 'Address',
  matchrules: 'Match rules',
  chieforassistant: 'Chief or Assistant',
  refundpolicy: 'Refund Policy',
  payment: 'Payment',
  earning: 'Earning',
  servicefee: 'Service fee',
  totalamount: 'Total amount',
  totalearning: 'Total earning',
  timezone: 'Time zone',
...
    'By selecting the button below, I agree to the Game Rules cancellation policy and refund policy. I also agree to pay the total amount shown above.',
  scorekeeper: 'Scorekeeper',

  // Challenge screen
  typeOfGame: 'Match Type',
  matchFee: 'Match Fee',
  homeAndAway: 'Home & Away',
  gameDuration: 'Game Duration',
  refundPolicy: 'Cancellation Policy',
  matchDuration: 'Match Duration',
  venueName: 'Venue name',
  everyEvent: 'Every event',
  eventCreatedByUser: 'Event created by personal user',
...
