...
      <ActivityLoader visible={loading} />

      <TCLabel title={strings.gameRulesTitle} />
      <Text style={styles.subTitleText}>{strings.gameRulesSubTitle1}</Text>

      <TextInput
        testID="general-rules-input"
        style={styles.rulesText}
        onChangeText={(text) => setGeneralRules(text)}
        value={generalRules}
        multiline
        maxLength={1000}
        textAlignVertical={'top'}
        numberOfLines={4}
        placeholder={strings.generalRulesPlaceholder}
        placeholderTextColor={colors.userPostTimeColor}
      />
      <Text style={styles.subTitleText}>{strings.gameRulesSubTitle2}</Text>
      <TextInput
        testID="special-rules-input"
        style={styles.rulesText}
        onChangeText={(text) => setSpecialRules(text)}
        value={specialRules}
        multiline
        maxLength={1000}
        textAlignVertical={'top'}
...
