...
  return (
    <TCKeyboardView>
      <View style={styles.mainContainer}>
        <View style={styles.sectionStyle}>
          <Image source={images.searchLocation} style={styles.searchImg} />
          <TextInput
            testID="location-input"
            autoCapitalize={'none'}
            autoCompleteType={'off'}
            textContentType={'none'}
            autoCorrect={false}
            style={styles.textInput}
            placeholder={strings.searchHereText}
...
