...
            <TCLabel
              title={strings.teamName.toUpperCase()}
              style={{marginTop: 30}}
              required={true}
            />
            <TextInput
              testID="team-name-input"
              placeholder={strings.teamName}
              style={styles.matchFeeTxt}
              maxLength={75}
              onChangeText={(text) => setTeamName(text)}
              value={teamName}
              placeholderTextColor={colors.userPostTimeColor}
...
              <TCLabel
                title={strings.playersGenderText.toUpperCase()}
                style={{marginTop: 25}}
                required={true}
              />
              <TouchableOpacity
                testID="gender-button"
                onPress={() => setVisibleGendersModal(true)}>
                <TextInput
                  style={[styles.matchFeeTxt, {marginBottom: 5}]}
                  placeholder={strings.genderTitle}
                  value={gender}
                  editable={false}
...
                  onPress={() => openPicker()}
                  style={{
                    width: '45%',
                    justifyContent: 'flex-start',
                  }}>
                  <RNPickerSelect
                    testID="min-age-picker"
                    placeholder={{
                      label: strings.minPlaceholder,
                      value: 0,
                    }}
                    pickerProps={{ref: Pickerref}}
                    ref={Platform.OS === 'ios' ? Pickerref : null}
...
                  style={{
                    width: '45%',
                    justifyContent: 'flex-start',
                  }}>
                  <RNPickerSelect
                    ref={Platform.OS === 'ios' ? Pickerref2 : null}
                    testID="max-age-picker"
                    placeholder={{
                      label: strings.maxPlaceholder,
                      value: 0,
                    }}
                    pickerProps={{ref: Pickerref2}}
                    fixAndroidTouchableBug={true}
...
